为subject添加英文名和图片字段

--- a/src/main/resources/static/css/subject.css
+++ b/src/main/resources/static/css/subject.css
@@ -17,53 +17,28 @@ table {
 }
 
 tr:nth-child(even) {
-    background-color: #efefef;
-}
-
-tr > td:nth-child(2),
-tr > td:nth-child(3),
-tr > td:nth-child(4) {
-    text-align: center;
+    background-color: #EFEFEF;
 }
 
 td {
     border: 1px dotted green;
     padding: 5px 10px;
 }
-
-
-td:nth-child(1):hover,
-td:nth-child(5):hover {
-    background-color: white;
-    cursor: copy;
-    font-style: italic;
-    font-weight: bolder;
-}
-
-.edit {
+td img{
     width: 25px;
     height: 25px;
     vertical-align: middle;
 }
-
-.editOver {
-    width: 29px;
-    height: 29px;
-    vertical-align: middle;
+td.uploadTd {
+    width: 150px;
+    padding: 2px 5px;
 }
-
-td .edit:hover {
-    width: 29px;
-    height: 29px;
-    vertical-align: middle;
+td.tdCenter {
+    text-align: center;
 }
-
-td .editOver:hover {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
+td.updateTd{
+  cursor: pointer;
 }
-
 /*搜索按钮与图标的位置*/
 .searchInput {
     background: none;
@@ -79,4 +54,52 @@ td .editOver:hover {
 .modalBody {
     background-color: #F2F2F2;
     padding: 10px;
+}
+/*上传组件样式*/
+
+.upload-div *{
+    box-sizing: border-box;
+}
+.upload-div {
+    position: relative;
+    width: 100%;
+}
+.upload-div a {
+    z-index: 0;
+    width: 60%;
+    height: 100%;
+    display: inline-block;
+    background: #45bf9e;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+}
+.upload-div input{
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 100%;
+}
+.upload-div input:hover{
+    cursor: pointer;
+}
+/*表单*/
+.formContainer * {
+    box-sizing: border-box;
+}
+.feildErr{/*表单字段错误提示*/
+    font-size: 12px;
+    color: #EB2904;
+}
+
+.colLabel {
+    padding-top: 20px;
+}
+
+.colValue {
+    padding-top: 15px;
 }
